Fix hovers at the bottom of the page being cut off

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3619,6 +3619,7 @@ strong {
 
 .HoverWrapper {
   position: relative;
+  display: inline-block;
 }
 
 .HoverWrapper-content {
